[gd_scene load_steps=4 format=3 uid="uid://dhf48sais5pgr"]

[ext_resource type="Script" path="res://infirmary/post_office/DocPopUp.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://cd3ojjgj3guul" path="res://roaming_pov/generic-doc.png" id="2"]

[sub_resource type="RectangleShape2D" id="1"]
size = Vector2(1430.73, 1068.51)

[node name="DocPopUp" type="Area2D" groups=["popups"]]
z_index = 1
script = ExtResource("1")

[node name="FullRect" type="Area2D" parent="."]
z_index = -2

[node name="CollisionShape2D" type="CollisionShape2D" parent="FullRect"]
z_index = 2
position = Vector2(1444.46, 1078.03)
shape = SubResource("1")

[node name="Document" type="TextureRect" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 993.342
offset_top = 337.516
offset_right = 1927.34
offset_bottom = 1673.52
mouse_filter = 0
texture = ExtResource("2")
expand_mode = 1
stretch_mode = 5

[connection signal="mouse_entered" from="." to="." method="_on_OnClickPopUp_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_OnClickPopUp_mouse_exited"]
[connection signal="input_event" from="FullRect" to="." method="_on_FullRect_input_event"]
